--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>test</title>
+	<title>Color of the Year 2021</title>
 	<link rel="stylesheet" href="css/default.css"/>
 </head>
 <body>
